--- a/app/views/rocket_job_mission_control/jobs/index_filters/completed.html.haml
+++ b/app/views/rocket_job_mission_control/jobs/index_filters/completed.html.haml
@@ -13,11 +13,12 @@
           %th Description
           %th Duration
           %th Completed
+          %th Actions
       %tbody
 
 :javascript
   jQuery(function() {
     new RjmcDatatable(
       $(".jobs-datatable"),
-      [{data: '0'}, {data: '1'}, {data: '2', orderable: false}, {data: '3'}]);
+      [{data: '0'}, {data: '1'}, {data: '2', orderable: false}, {data: '3'}, {data: '4', orderable: false}]);
   });
