--- a/app/views/rocket_job_mission_control/jobs/index_filters/running.html.haml
+++ b/app/views/rocket_job_mission_control/jobs/index_filters/running.html.haml
@@ -14,11 +14,12 @@
           %th Progress
           %th Priority
           %th Started
+          %th Actions
       %tbody
 
 :javascript
   jQuery(function() {
     new RjmcDatatable(
       $(".jobs-datatable"),
-      [{data: '0'}, {data: '1'}, {data: '2', orderable: false}, {data: '3'}, {data: '4'}]);
+      [{data: '0'}, {data: '1'}, {data: '2', orderable: false}, {data: '3'}, {data: '4'}, {data: '5', orderable: false}]);
   });
