--- a/app/views/rocket_job_mission_control/jobs/index_filters/scheduled.html.haml
+++ b/app/views/rocket_job_mission_control/jobs/index_filters/scheduled.html.haml
@@ -13,12 +13,12 @@
           %th Description
           %th Runs in
           %th Cron Schedule
-          %th Run Now
+          %th Actions
       %tbody
 
 :javascript
   jQuery(function() {
     new RjmcDatatable(
       $(".jobs-datatable"),
-      [{data: '0'}, {data: '1'}, {data: '2', orderable: false}, {data: '3'}, {data: '4', orderable: false}]);
+      [{data: '0'}, {data: '1'}, {data: '2'}, {data: '3'}, {data: '4', orderable: false}]);
   });
