--- a/app/views/rocket_job_mission_control/jobs/index_filters/paused.html.haml
+++ b/app/views/rocket_job_mission_control/jobs/index_filters/paused.html.haml
@@ -12,11 +12,12 @@
           %th Class
           %th Description
           %th Paused
+          %th Actions
       %tbody
 
 :javascript
   jQuery(function() {
     new RjmcDatatable(
       $(".jobs-datatable"),
-      [{data: '0'}, {data: '1'}, {data: '2'}]);
+      [{data: '0', width: '30%'}, {data: '1', width: '30%'}, {data: '2'}, {data: '3', orderable: false}]);
   });
