--- a/app/views/rocket_job_mission_control/jobs/index_filters/queued.html.haml
+++ b/app/views/rocket_job_mission_control/jobs/index_filters/queued.html.haml
@@ -13,11 +13,12 @@
           %th Description
           %th Priority
           %th Queued For
+          %th Actions
       %tbody
 
 :javascript
   jQuery(function() {
     new RjmcDatatable(
       $(".jobs-datatable"),
-      [{data: '0'}, {data: '1'}, {data: '2'}, {data: '3', orderable: false}]);
+      [{data: '0'}, {data: '1'}, {data: '2'}, {data: '3', orderable: false}, {data: '4', orderable: false}]);
   });
