--- a/app/views/layouts/rocket_job_mission_control/partials/_header.html.haml
+++ b/app/views/layouts/rocket_job_mission_control/partials/_header.html.haml
@@ -7,9 +7,8 @@
         %span.icon-bar
         %span.icon-bar
       %a.navbar-brand.brand{ href: 'http://rocketjob.io', target: '_blank'}
-        = image_tag('rocket_job_mission_control/rocket-icon-64x64.png', size: '32x32')
-        Rocket
-        %span Job
+        = image_tag('rocket_job_mission_control/rocket-icon-64x64.png')
+        Rocket Job
     .navbar-collapse.collapse
       %ul.nav.navbar-nav
         %li
@@ -30,4 +29,4 @@
             Directory Monitors
       %ul.nav.navbar-nav.navbar-right
         %li
-          %a{:href => main_app.root_path } Home
+          %a{:href => '/' } Home
