--- a/app/views/rocket_job_mission_control/dirmon_entries/_sidebar.html.haml
+++ b/app/views/rocket_job_mission_control/dirmon_entries/_sidebar.html.haml
@@ -2,7 +2,7 @@
   %li
     = link_to(new_dirmon_entry_path) do
       %i.fa.fa-plus
-      New Entry
+      Create
   %li
     = link_to(dirmon_entries_path) do
       %i.fa.fa-list
