--- a/app/assets/stylesheets/rocket_job_mission_control/bootstrap_and_overrides.scss
+++ b/app/assets/stylesheets/rocket_job_mission_control/bootstrap_and_overrides.scss
@@ -17,7 +17,7 @@ $text-color:                                $gray-dark;
 $link-color:                                $brand-primary;
 $link-hover-color:                          darken($link-color, 15%);
 
-$font-family-sans-serif:                    "Helvetica Neue", Helvetica, Arial, sans-serif;
+$font-family-sans-serif:                    Arial, sans-serif;
 $font-family-serif:                         Georgia, "Times New Roman", Times, serif;
 $font-family-monospace:                     Menlo, Monaco, Consolas, "Courier New", monospace;
 $font-family-base:                          $font-family-sans-serif;
