Add icon for sortable columns which arent currently sorted.

--- a/app/assets/stylesheets/rocket_job_mission_control/base.scss
+++ b/app/assets/stylesheets/rocket_job_mission_control/base.scss
@@ -32,7 +32,7 @@ table.datatable {
 }
 
 table.dataTable thead .sorting:after {
-    content: "";
+    content: "\f0c9";
 }
 
 table.dataTable thead .sorting_asc:after {
