Rename Workers to Servers and change default sort for job view

--- a/app/views/layouts/rocket_job_mission_control/partials/_header.html.haml
+++ b/app/views/layouts/rocket_job_mission_control/partials/_header.html.haml
@@ -18,7 +18,7 @@
         %li
           = link_to workers_path, class: active_page(workers_path) do
             %i.fa.fa-database
-            Workers
+            Servers
         %li
           = link_to active_processes_path, class: active_page(active_processes_path) do
             %i.fa.fa-circle-o-notch
