--- a/app/views/rocket_job_mission_control/workers/index_filters/running.html.haml
+++ b/app/views/rocket_job_mission_control/workers/index_filters/running.html.haml
@@ -3,7 +3,7 @@
     .list
       .row
         .col-md-6
-          %h2 Running Worker Processes
+          %h2 Running Servers
         .col-md-6
           .col-sm-10
             .worker-collection-actions
