--- a/app/views/rocket_job_mission_control/workers/index_filters/stopping.html.haml
+++ b/app/views/rocket_job_mission_control/workers/index_filters/stopping.html.haml
@@ -3,7 +3,7 @@
     .list
       .row
         .col-md-6
-          %h2 Stopping Worker Processes
+          %h2 Stopping Servers
         .col-md-6
           .col-sm-10
             .worker-collection-actions
