Sorting active workers by duration

--- a/app/views/rocket_job_mission_control/active_processes/index.html.haml
+++ b/app/views/rocket_job_mission_control/active_processes/index.html.haml
@@ -12,7 +12,7 @@
           %th Hostname : PID
           %th Class
           %th Description
-          %th Started
+          %th Duration
       %tbody
 
 :javascript
