--- a/app/views/rocket_job_mission_control/dirmon_entries/_properties.html.haml
+++ b/app/views/rocket_job_mission_control/dirmon_entries/_properties.html.haml
@@ -12,9 +12,9 @@
           placeholder: '{"argument1":"value1", "argument2":"value2", "argument3":"value3"}',
           class: 'form-control'
     = f.fields_for :properties do |properties|
-      - @dirmon_entry.job_class.rocket_job_properties.each do |property_name|
+      - @dirmon_entry.job_class.user_editable_fields.each do |property_name|
         - next if property_name == :arguments
-        - key = @dirmon_entry.job_class.keys[property_name.to_s]
+        - key = @dirmon_entry.job_class.fields[property_name.to_s]
         - next unless key && key.type
         - placeholder = key.default? ? key.default : nil
         .form-group
