Use new Server classes

--- a/app/views/layouts/rocket_job_mission_control/partials/_header.html.haml
+++ b/app/views/layouts/rocket_job_mission_control/partials/_header.html.haml
@@ -16,7 +16,7 @@
             %i.fa.fa-home
             Jobs
         %li
-          = link_to workers_path, class: active_page(workers_path) do
+          = link_to servers_path, class: active_page(servers_path) do
             %i.fa.fa-database
             Servers
         %li
