--- a/app/views/rocket_job_mission_control/active_processes/index.html.haml
+++ b/app/views/rocket_job_mission_control/active_processes/index.html.haml
@@ -2,7 +2,7 @@
   .list
     .row
       .col-sm-10
-        %h2 Active Workers
+        %h2 Active Servers
       .col-sm-2
         .btn.btn-default.pull-right.dt-reload{ data: { behavior: 'reload' } }
           %i.fa.fa-refresh
