--- a/app/views/rocket_job_mission_control/dirmon_entries/_properties.html.haml
+++ b/app/views/rocket_job_mission_control/dirmon_entries/_properties.html.haml
@@ -3,12 +3,12 @@
     .job_arguments.form-group
     = f.fields_for :properties do |properties|
       - @dirmon_entry.job_class.user_editable_fields.each do |property_name|
-        - key = @dirmon_entry.job_class.fields[property_name.to_s]
-        - next unless key && key.type
-        - placeholder = key.default? ? key.default : nil
+        - field = @dirmon_entry.job_class.fields[property_name.to_s]
+        - next unless field && field.type
+        - placeholder = field.default_val
         .form-group
           = properties.label property_name.to_s
-          - case key.type.name
+          - case field.type.name
           - when 'Integer'
             = properties.number_field property_name, value: @dirmon_entry.properties[property_name], class: 'form-control', placeholder: placeholder
           - when 'Hash'
