--- a/app/views/rocket_job_mission_control/jobs/show.html.haml
+++ b/app/views/rocket_job_mission_control/jobs/show.html.haml
@@ -14,15 +14,16 @@
             = sub_state
 
       .btn-toolbar.job-actions.pull-right
+        - if @job.respond_to?(:input) && @job.input.failed.count > 0
+          .btn-group
+            = link_to('Show Exceptions', exceptions_job_path(@job), class: 'btn btn-default')
+
+        - if @job.scheduled?
+          .btn-group
+            = job_action_link('Run', rocket_job_mission_control.run_now_job_path(@job), :patch)
+
         .btn-group
           - valid_events = @job.aasm.events.collect{ |e| e.name }
-          - if valid_events.include?(:abort)
-            = job_action_link('Abort', rocket_job_mission_control.abort_job_path(@job), :patch)
-
-          = job_action_link('Destroy', rocket_job_mission_control.job_path(@job), :delete)
-
-          - if valid_events.include?(:fail)
-            = job_action_link('Fail', rocket_job_mission_control.fail_job_path(@job), :patch)
 
           - if valid_events.include?(:pause)
             = job_action_link('Pause', rocket_job_mission_control.pause_job_path(@job), :patch)
@@ -33,8 +34,15 @@
           - if valid_events.include?(:retry)
             = job_action_link('Retry', rocket_job_mission_control.retry_job_path(@job), :patch)
 
-          - if @job.respond_to?(:input) && @job.input.failed.count > 0
-            = link_to('View Errors', job_failures_path(@job), class: 'btn btn-default')
+        .btn-group
+          - if valid_events.include?(:fail)
+            = job_action_link('Fail', rocket_job_mission_control.fail_job_path(@job), :patch)
+
+          - if valid_events.include?(:abort)
+            = job_action_link('Abort', rocket_job_mission_control.abort_job_path(@job), :patch)
+
+          = job_action_link('Destroy', rocket_job_mission_control.job_path(@job), :delete)
+
         - unless @job.completed? || @job.aborted?
           .btn-group
             = link_to "Edit", edit_job_path(@job), class: "btn btn-default"
