Use new ActiveWorker class in RocketJob

--- a/app/views/layouts/rocket_job_mission_control/partials/_header.html.haml
+++ b/app/views/layouts/rocket_job_mission_control/partials/_header.html.haml
@@ -20,9 +20,9 @@
             %i.fa.fa-database
             Servers
         %li
-          = link_to active_processes_path, class: active_page(active_processes_path) do
+          = link_to active_workers_path, class: active_page(active_workers_path) do
             %i.fa.fa-circle-o-notch
-            Activity
+            Workers
         %li
           = link_to enabled_dirmon_entries_path, class: active_page(enabled_dirmon_entries_path) do
             %i.fa.fa-folder-o
