Servers controller refinements

--- a/app/views/rocket_job_mission_control/servers/_sidebar.html.erb
+++ b/app/views/rocket_job_mission_control/servers/_sidebar.html.erb
@@ -4,12 +4,10 @@
       <i class="fa fa-list"></i>All
     <% end %>
   </li>
-  <% states = RocketJob::Server.aasm.states.map { |s| s.name.to_s }
-     states << 'zombie'
-     states.each do |state| %>
+  <% @states.each do |state| %>
     <li class="#{state}">
       <%= link_to("#{state}_servers".to_sym) do %>
-        <i class="fa <%= state_icon(state) %>"></i> <%= state.to_s.capitalize!%> (<%= server_counts_by_state(state)%>)
+        <i class="fa <%= state_icon(state) %>"></i> <%= state.capitalize%> (<%= server_counts_by_state(state)%>)
       <% end %>
     </li>
   <% end %>
@@ -23,7 +21,7 @@
       <i class="fa fa-list"></i>
     <% end %>
   </li>
-  <% RocketJob::Server.aasm.states.map { |s| s.name.to_s }.each do |state| %>
+  <% @states.each do |state| %>
     <li class="#{state}">
       <%= link_to("#{state}_servers".to_sym) do %>
         <i class="fa <%= state_icon(state) %>"></i>
