--- a/app/views/rocket_job_mission_control/servers/index.html.erb
+++ b/app/views/rocket_job_mission_control/servers/index.html.erb
@@ -52,6 +52,7 @@
   jQuery(function () {
     new RjmcDatatable(
       $('.servers-datatable'),
-      [{data: '0'}, {data: '1'}, {data: '2'}, {data: '3'}, {data: '4', orderable: false}]);
+      [{data: '0'}, {data: '1'}, {data: '2'}, {data: '3'}, {data: '4', orderable: false}]
+    );
   });
 </script>
