Refactor job datatables and views

--- a/app/views/rocket_job_mission_control/jobs/_sidebar.html.haml
+++ b/app/views/rocket_job_mission_control/jobs/_sidebar.html.haml
@@ -8,7 +8,7 @@
       %i.fa.fa-clock-o
       Scheduled
       = "(#{job_counts_by_state("scheduled")})"
-  - job_states.each do |state|
+  - @job_states.each do |state|
     %li{class: state}
       = link_to("#{state}_jobs".to_sym) do
         %i.fa{class: state_icon(state)}
@@ -22,7 +22,7 @@
   %li
     = link_to(scheduled_jobs_path) do
       %i.fa.fa-clock-o
-  - job_states.each do |state|
+  - @job_states.each do |state|
     %li{class: state}
       = link_to("#{state}_jobs".to_sym) do
         %i.fa{class: state_icon(state)}
