--- a/app/views/layouts/rocket_job_mission_control/application.html.erb
+++ b/app/views/layouts/rocket_job_mission_control/application.html.erb
@@ -29,25 +29,9 @@
       <div class="col-sm-10 col-xs-11 white-background" id="main">
         <%= render partial: 'layouts/rocket_job_mission_control/partials/header' %>
 
-        <div class="flash text-center">
-          <% flash.each do |key, msg| %>
-            <div class="alert alert-alert alert-dismissable" role="alert">
-              <button class="close" data-dismiss="alert">
-                <span>&times;</span>
-              </button>
-              <% if msg.kind_of? Array %>
-                <ul class="list-unstyled margin-bottom-0">
-                  <% msg.each do |m| %>
-                    <li><%= m.html_safe %></li>
-                  <% end %>
-                </ul>
-              <% else %>
-                <%= msg.html_safe %>
-              <% end %>
-            </div>
-          <% end %>
-        </div>
         <div id="content">
+          <%= render partial: 'layouts/rocket_job_mission_control/partials/flash' %>
+
           <%= yield %>
         </div>
       </div>
