--- a/app/views/layouts/rocket_job_mission_control/partials/_header.html.erb
+++ b/app/views/layouts/rocket_job_mission_control/partials/_header.html.erb
@@ -8,7 +8,7 @@
         <span class="icon-bar"></span>
       </button>
       <a class="navbar-brand brand" href="http://rocketjob.io" target="_blank">
-        <img src="/assets/rocket_job_mission_control/rocket-icon-64x64.png" alt="Rocket icon 64x64">
+        <%= image_tag('rocket_job_mission_control/rocket-icon-64x64.png') %>
         Rocket Job
       </a>
     </div>
