Handle nil message

--- a/app/views/layouts/rocket_job_mission_control/partials/_flash.html.erb
+++ b/app/views/layouts/rocket_job_mission_control/partials/_flash.html.erb
@@ -12,7 +12,7 @@
             <% end %>
           </ul>
         <% else %>
-          <%= msg.html_safe %>
+          <%= msg.to_s.html_safe %>
         <% end %>
       </div>
     <% end %>
