--- a/app/assets/stylesheets/rocket_job_mission_control/base.scss
+++ b/app/assets/stylesheets/rocket_job_mission_control/base.scss
@@ -150,8 +150,10 @@ table.dataTable thead > tr > th {
       border-bottom-right-radius: 3px;
     }
 
-    .queued, .pending { background-color: darkgrey; }
+    .queued, .pending, { background-color: #A29F00; }
+    .scheduled { background-color: #92001B; }
     .running { background-color: #337ab7; }
+    .sleeping { background-color: darkcyan; }
     .completed, .enabled { background-color: green; }
     .paused, .disabled { background-color: orange; }
     .failed { background-color: red; }
@@ -320,8 +322,10 @@ table.dataTable thead > tr > th {
         display: inline-block;
         vertical-align: middle;
 
-        i.queued { color: darkgrey; }
+        i.queued { color: #A29F00; }
+        i.scheduled { color: #92001B; }
         i.running { color: #337ab7; }
+        i.sleeping { color: darkcyan; }
         i.completed { color: green; }
         i.paused { color: orange; }
         i.failed { color: red; }
