Fix bootstrap layout issues.

--- a/app/views/layouts/rocket_job_mission_control/partials/_header.html.erb
+++ b/app/views/layouts/rocket_job_mission_control/partials/_header.html.erb
@@ -7,11 +7,12 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
+
       <a class="navbar-brand brand" href="http://rocketjob.io" target="_blank">
-        <img src="/assets/rocket_job_mission_control/rocket-icon-64x64.png" alt="Rocket icon 64x64">
-        Rocket Job
+        <img src="/assets/rocket_job_mission_control/rocket-icon-64x64.png" alt="Rocket icon 64x64" /> Rocket Job
       </a>
     </div>
+
     <div class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
         <li>
@@ -19,26 +20,28 @@
             <i class="fa fa-home"></i> Jobs
           <% end %>
         </li>
+
         <li>
           <%= link_to servers_path, class: active_page(servers_path) do %>
             <i class="fa fa-database"></i> Servers
           <% end %>
         </li>
+
         <li>
           <%= link_to active_workers_path, class: active_page(active_workers_path) do %>
             <i class="fa fa-circle-o-notch"></i> Workers
           <% end %>
         </li>
+
         <li>
           <%= link_to enabled_dirmon_entries_path, class: active_page(enabled_dirmon_entries_path) do %>
             <i class="fa fa-folder-o"></i> Directory Monitoring
           <% end %>
         </li>
       </ul>
+
       <ul class="nav navbar-nav navbar-right">
-        <li>
-          <a href="/">Home</a>
-        </li>
+        <li><a href="/">Home</a></li>
       </ul>
     </div>
   </div>
